--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         python-version: [ '3.10', '3.11', '3.12' ]
+        node-version: [ '20' ]
     runs-on: ${{ matrix.os }}
     needs: lint
     steps:
@@ -59,12 +60,41 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Dependencies
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
           pip install pytest-html
           pip install -r requirements.txt
+
+      - name: Install NodeJS Dependencies
+        run: |
+          cd tests
+          npm install
+
+      - name: Generate Self-Signed SSL Certificate
+        run: |
+          cd tests
+          openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 2 -nodes -subj "/CN=localhost"
+
+      - name: Start HTTP/s Server (Ubuntu and MacOS)
+        if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
+        run: |
+          cd tests
+          nohup node index.js & 
+          sleep 5
+
+      - name: Start HTTP/s Server (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd tests
+          Start-Process -FilePath node -ArgumentList 'index.js'
+          Start-Sleep -Seconds 5
 
       - name: Set Branch Name (Windows)
         if: matrix.os == 'windows-latest'
